--- a/index.html
+++ b/index.html
@@ -7,8 +7,14 @@
 		<link rel="stylesheet" href="./style.css" />
 	</head>
 	<body>
-		<canvas id="collisionCanvas"></canvas>
-		<canvas id="canvas1"></canvas>
+		<div class="canvas-container">
+			<canvas id="collisionCanvas"></canvas>
+			<canvas id="canvas1"></canvas>
+		</div>
+
+		<div class="error-container">
+			<h1>Only Available on PC</h1>
+		</div>
 
 		<script src="./script.js"></script>
 	</body>
